// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CommandPalette Generator - Snapshot Tests (Intermediate Data) > should produce consistent base config 1`] = `
{
  "background": "color-surface-2",
  "borderRadius": 8,
  "item": {
    "highlightedBackground": "color-subtle",
    "iconColor": "text-muted",
    "normalBackground": null,
    "padding": {
      "borderRadius": 8,
      "gap": 12,
      "paddingX": 8,
      "paddingY": 6,
    },
    "textColor": "text-color-surface",
  },
  "sections": {
    "footer": {
      "background": "color-surface-2",
      "padding": {
        "fontSize": 12,
        "paddingX": 16,
        "paddingY": 12,
        "textVariable": "text-color-label",
      },
      "textColor": "text-color-label",
    },
    "inputHeader": {
      "background": "color-surface-elevated",
      "padding": {
        "gap": 12,
        "paddingX": 16,
        "paddingY": 12,
      },
    },
    "list": {
      "background": "color-surface-elevated",
      "border": "color-border",
      "padding": {
        "hasBorder": true,
        "paddingX": 8,
        "paddingY": 8,
        "strokeVariable": "color-border",
      },
    },
  },
  "shadow": {
    "blur": 32,
    "offsetX": 0,
    "offsetY": 8,
    "opacity": 0.16,
    "spread": 0,
  },
  "width": 672,
}
`;

exports[`CommandPalette Generator - Snapshot Tests (Intermediate Data) > should produce consistent classes 1`] = `
{
  "breadcrumbSeparator": "h-3 w-3 text-muted",
  "container": "rounded-lg bg-surface-2",
  "dialog": "max-w-2xl rounded-lg",
  "empty": "p-8 text-label",
  "externalIcon": "h-3.5 w-3.5 text-muted",
  "footer": "rounded-b-lg bg-surface-2 px-4 py-3 text-xs text-label",
  "group": "space-y-0.5",
  "groupLabel": "px-2 pt-1 text-xs font-semibold text-label",
  "highlightMark": "rounded-sm bg-alert/50 text-surface",
  "input": "text-base",
  "inputHeader": "gap-3 bg-surface-elevated px-4 py-3",
  "item": "gap-3 px-2 py-1.5 rounded-lg",
  "itemHighlighted": "bg-subtle",
  "list": "rounded-b-lg bg-surface-elevated px-2 py-2 ring-1 ring-border",
  "loading": "p-8",
  "resultArrow": "h-4 w-4 text-muted",
  "resultIcon": "text-muted",
  "resultTitle": "text-base text-surface",
  "searchIcon": "h-4 w-4 text-muted",
}
`;

exports[`CommandPalette Generator - Snapshot Tests (Intermediate Data) > should produce consistent config 1`] = `
{
  "footerHeight": 36,
  "groupLabelHeight": 24,
  "inputHeight": 40,
  "itemHeight": 26,
  "maxHeight": 400,
  "width": 672,
}
`;

exports[`CommandPalette Generator - Snapshot Tests (Intermediate Data) > should produce consistent container styles 1`] = `
{
  "borderRadius": 8,
}
`;

exports[`CommandPalette Generator - Snapshot Tests (Intermediate Data) > should produce consistent footer styles 1`] = `
{
  "fontSize": 12,
  "paddingX": 16,
  "paddingY": 12,
  "textVariable": "text-color-label",
}
`;

exports[`CommandPalette Generator - Snapshot Tests (Intermediate Data) > should produce consistent inputHeader styles 1`] = `
{
  "gap": 12,
  "paddingX": 16,
  "paddingY": 12,
}
`;

exports[`CommandPalette Generator - Snapshot Tests (Intermediate Data) > should produce consistent intermediate data (golden path) 1`] = `
{
  "classes": {
    "breadcrumbSeparator": "h-3 w-3 text-muted",
    "container": "rounded-lg bg-surface-2",
    "dialog": "max-w-2xl rounded-lg",
    "empty": "p-8 text-label",
    "externalIcon": "h-3.5 w-3.5 text-muted",
    "footer": "rounded-b-lg bg-surface-2 px-4 py-3 text-xs text-label",
    "group": "space-y-0.5",
    "groupLabel": "px-2 pt-1 text-xs font-semibold text-label",
    "highlightMark": "rounded-sm bg-alert/50 text-surface",
    "input": "text-base",
    "inputHeader": "gap-3 bg-surface-elevated px-4 py-3",
    "item": "gap-3 px-2 py-1.5 rounded-lg",
    "itemHighlighted": "bg-subtle",
    "list": "rounded-b-lg bg-surface-elevated px-2 py-2 ring-1 ring-border",
    "loading": "p-8",
    "resultArrow": "h-4 w-4 text-muted",
    "resultIcon": "text-muted",
    "resultTitle": "text-base text-surface",
    "searchIcon": "h-4 w-4 text-muted",
  },
  "config": {
    "footerHeight": 36,
    "groupLabelHeight": 24,
    "inputHeight": 40,
    "itemHeight": 26,
    "maxHeight": 400,
    "width": 672,
  },
  "parsedStyles": {
    "breadcrumbSeparator": {
      "height": 12,
      "textVariable": "text-color-muted",
    },
    "container": {
      "borderRadius": 8,
    },
    "dialog": {
      "borderRadius": 8,
    },
    "empty": {
      "textVariable": "text-color-label",
    },
    "externalIcon": {
      "height": 14,
      "textVariable": "text-color-muted",
    },
    "footer": {
      "fontSize": 12,
      "paddingX": 16,
      "paddingY": 12,
      "textVariable": "text-color-label",
    },
    "group": {},
    "groupLabel": {
      "fontSize": 12,
      "fontWeight": 600,
      "paddingX": 8,
      "textVariable": "text-color-label",
    },
    "highlightMark": {
      "borderRadius": 4,
      "fillOpacity": 0.5,
      "fillVariable": "color-alert/50",
      "textVariable": "text-color-surface",
    },
    "input": {
      "fontSize": 14,
    },
    "inputHeader": {
      "gap": 12,
      "paddingX": 16,
      "paddingY": 12,
    },
    "item": {
      "borderRadius": 8,
      "gap": 12,
      "paddingX": 8,
      "paddingY": 6,
    },
    "itemHighlighted": {
      "fillVariable": "color-subtle",
    },
    "list": {
      "hasBorder": true,
      "paddingX": 8,
      "paddingY": 8,
      "strokeVariable": "color-border",
    },
    "loading": {},
    "resultArrow": {
      "height": 16,
      "textVariable": "text-color-muted",
    },
    "resultIcon": {
      "textVariable": "text-color-muted",
    },
    "resultTitle": {
      "fontSize": 14,
      "textVariable": "text-color-surface",
    },
    "searchIcon": {
      "height": 16,
      "textVariable": "text-color-muted",
    },
  },
  "subComponents": [
    "Dialog",
    "Root",
    "Panel",
    "Input",
    "List",
    "Group",
    "GroupLabel",
    "Item",
    "ResultItem",
    "HighlightedText",
    "Empty",
    "Loading",
    "Footer",
    "Results",
    "Items",
  ],
}
`;

exports[`CommandPalette Generator - Snapshot Tests (Intermediate Data) > should produce consistent item styles 1`] = `
{
  "borderRadius": 8,
  "gap": 12,
  "paddingX": 8,
  "paddingY": 6,
}
`;

exports[`CommandPalette Generator - Snapshot Tests (Intermediate Data) > should produce consistent list styles 1`] = `
{
  "hasBorder": true,
  "paddingX": 8,
  "paddingY": 8,
  "strokeVariable": "color-border",
}
`;
